--- a/src/components/Content.module.scss
+++ b/src/components/Content.module.scss
@@ -1,11 +1,26 @@
+@use '../assets/styles/_mixins.scss' as mixin;
 .grid{
   display: grid;
   grid-template-columns: repeat(3,350px);
   grid-auto-columns: repeat(3,350);
   gap: 20px;
   place-content: center;
+  @include mixin.lg-lt{  
+  grid-template-columns: repeat(2, 350px);
+  grid-auto-columns: repeat(2, 350px);
+  }
+  @include mixin.md-lt{  
+    grid-template-columns: 1fr;
+    grid-auto-columns: 1fr;
+    }
+    @include mixin.xs{  
+      grid-template-columns: 1fr;
+      grid-auto-columns: 1fr;
+      }
+    
 }
 
 .contentCard{
-  width: 1130px;
+  max-width: 1130px;
+  width: 100%;
 }
