--- a/src/pages/Homepage/Homepage.module.scss
+++ b/src/pages/Homepage/Homepage.module.scss
@@ -1,4 +1,4 @@
-@use '../assets/styles/_mixins.scss' as mixin;
+@use '../../assets/styles/_mixins.scss' as mixin;
 .grid{
   display: grid;
   grid-template-columns: repeat(3,350px);
@@ -23,4 +23,14 @@
 .contentCard{
   max-width: 1130px;
   width: 100%;
+}
+
+.searchBar{
+  padding: 10px 15px;
+  border: 1px solid var(--gray-2);
+  border-radius: 20px;
+  input{
+    outline: 0;
+    border: 0;
+  }
 }
